--- a/views/chatRoom/guestChatRoom.ejs
+++ b/views/chatRoom/guestChatRoom.ejs
@@ -13,7 +13,9 @@
         <div class="header-container">
           <h3 class="web-head-icon">ChatterBox</h3>
           <div class="profile-btn-ctr">
-            <button><a href="/sign-up">Create an Account</a></button>
+            <button class="header-btn">
+              <a class="head-text" href="/sign-up">CREATE ACCOUNT</a>
+            </button>
           </div>
         </div>
         <!-- <h1>Welcome Back <%= user.username %></h1> -->
@@ -62,7 +64,7 @@
               name="message"
               id="message"
               required
-              placeholder="You need to become a member to start chatting"
+              placeholder="You need to create an account to start chatting"
               disabled
               style="
                 padding: 10px;
