--- a/views/chatRoom/loginChatRoom.ejs
+++ b/views/chatRoom/loginChatRoom.ejs
@@ -13,8 +13,15 @@
         <div class="header-container">
           <h3 class="web-head-icon">ChatterBox</h3>
           <div class="profile-btn-ctr">
-            <button><a href="">Become a Member</a></button>
-            <a href="/log-out">Log Out</a>
+            <button class="header-btn">
+              <a class="head-text become-member-text" href="/membership-code"
+                >Become a Member</a
+              >
+            </button>
+            <p></p>
+            <button class="header-btn">
+              <a class="head-text" href="/log-out">Log Out</a>
+            </button>
           </div>
         </div>
         <!-- <h1>Welcome Back <%= user.username %></h1> -->
