--- a/views/forms/sign-up.ejs
+++ b/views/forms/sign-up.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign-Up</title>
+    <title>Sign-Up | ChatterBox</title>
     <link rel="shortcut icon" href="/icons/chat.png" type="image/x-icon" />
     <link rel="stylesheet" href="/signup-form.css" />
   </head>
@@ -98,7 +98,7 @@
         <input
           id="member_code"
           type="text"
-          placeholder="Member code is 111"
+          placeholder="Member code (optional)"
           name="member_code"
           value="<%= value.member_code %>"
         />
@@ -114,7 +114,7 @@
         <input
           id="admin_code"
           type="text"
-          placeholder="Admin code is 888"
+          placeholder="Admin code (optional)"
           name="admin_code"
           value="<%= value.admin_code %>"
         />
