--- a/views/chatRoom/adminChatRoom.ejs
+++ b/views/chatRoom/adminChatRoom.ejs
@@ -13,7 +13,9 @@
         <div class="header-container">
           <h3 class="web-head-icon">ChatterBox</h3>
           <div class="profile-ctr">
-            <button><a href="/log-out">LOG OUT</a></button>
+            <button class="header-btn">
+              <a class="head-text" href="/log-out">LOG OUT</a>
+            </button>
           </div>
         </div>
         <!-- <h1>Welcome Back <%= user.username %></h1> -->
@@ -48,8 +50,10 @@
                 >
                   <%= message.username %> <% if (message.is_admin) { %>
                   <img src="/icons/protection (3).png" class="admin-icon" />
-                  <% } else { %>
+                  <% } else if (message.is_member) { %>
                   <img src="/icons/member.png" class="member-icon" />
+                  <% } else { %>
+                  <!-- Render an empty string if neither condition is met -->
                   <% } %>
                 </strong>
                 <span class="message-time"
