--- a/views/chatRoom/memberChatRoom.ejs
+++ b/views/chatRoom/memberChatRoom.ejs
@@ -12,6 +12,7 @@
       <header>
         <div class="header-container">
           <h3 class="web-head-icon">ChatterBox</h3>
+          <h3>Public</h3>
           <div class="profile-ctr">
             <button class="header-btn">
               <a class="head-text" href="/log-out">LOG OUT</a>
