refactor: hint code

--- a/views/forms/sign-up.ejs
+++ b/views/forms/sign-up.ejs
@@ -98,7 +98,7 @@
         <input
           id="member_code"
           type="text"
-          placeholder="Member code (optional)"
+          placeholder="Member code (optional: 111)"
           name="member_code"
           value="<%= value.member_code %>"
         />
@@ -114,7 +114,7 @@
         <input
           id="admin_code"
           type="text"
-          placeholder="Admin code (optional)"
+          placeholder="Admin code (optional: 888)"
           name="admin_code"
           value="<%= value.admin_code %>"
         />
